YouTube video fix to be responsive on mobile

--- a/css/index.css
+++ b/css/index.css
@@ -142,6 +142,7 @@ ul {
 }
 
 img,
+iframe.yt,
 video {
   max-width: 100%;
 }
